--- a/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
@@ -7,3 +7,13 @@ java_proto_library(
     name = "person_java_proto",
     deps = [":person_proto"],
 )
+
+proto_library(
+    name = "device_proto",
+    srcs = ["device.proto"],
+)
+
+java_proto_library(
+    name = "device_java_proto",
+    deps = [":device_proto"],
+)
