--- a/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
@@ -1,3 +1,5 @@
+load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
+
 proto_library(
     name = "person_proto",
     srcs = ["person.proto"],
@@ -16,4 +18,24 @@ proto_library(
 java_proto_library(
     name = "device_java_proto",
     deps = [":device_proto"],
+)
+
+proto_library(
+    name = "acquire_device_service_proto",
+    srcs = ["acquire_device_service.proto"],
+    deps = [
+        ":person_proto",
+        ":device_proto",
+    ],
+)
+
+java_proto_library(
+    name = "acquire_device_service_java_proto",
+    deps = [":acquire_device_service_proto"],
+)
+
+java_grpc_library(
+    name = "acquire_device_service_java_grpc",
+    srcs = [":acquire_device_service_proto"],
+    deps = [":acquire_device_service_java_proto"],
 )
