--- a/server/src/main/java/org/cubingusa/techcubing/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/BUILD
@@ -2,4 +2,8 @@ java_binary(
     name = "main",
     srcs = ["Main.java"],
     main_class = "org.cubingusa.techcubing.Main",
+    deps = [
+        "//src/main/java/org/cubingusa/techcubing/server:HomeHandler",
+        "//src/main/java/org/cubingusa/techcubing/server:ServerState",
+    ],
 )
