--- a/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
@@ -3,18 +3,10 @@ package(
 )
 
 java_library(
-    name = "ServerState",
-    srcs = ["ServerState.java"],
-    deps = [
-        "@org_freemarker_freemarker//jar",
-    ],
-)
-
-java_library(
     name = "HomeHandler",
     srcs = ["HomeHandler.java"],
     deps = [
-        ":ServerState",
         "@org_freemarker_freemarker//jar",
+        "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
     ],
 )
