--- a/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
@@ -9,3 +9,17 @@ java_library(
         "@org_freemarker_freemarker//jar",
     ],
 )
+
+java_library(
+    name = "OAuth",
+    srcs = ["OAuth.java"],
+    deps = [
+        ":ServerState",
+        "@javax_javaee_web_api//jar",
+    ],
+)
+
+java_library(
+    name = "QueryParser",
+    srcs = ["QueryParser.java"],
+)
