Add a handler to update a competition info.

--- a/server/src/main/java/org/cubingusa/techcubing/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/BUILD
@@ -9,6 +9,7 @@ java_binary(
         "//src/main/java/org/cubingusa/techcubing/handlers:CompetitionsHandler",
         "//src/main/java/org/cubingusa/techcubing/handlers:HomeHandler",
         "//src/main/java/org/cubingusa/techcubing/handlers:OAuthRedirectHandler",
+        "//src/main/java/org/cubingusa/techcubing/handlers:SetCompetitionHandler",
     ],
     runtime_deps = [
         "@org_glassfish_jersey_core_jersey_common//jar",
