--- a/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
@@ -29,6 +29,7 @@ java_library(
     name = "MysqlConnection",
     srcs = ["MysqlConnection.java"],
     deps = [
+        "@com_google_protobuf//:protobuf_java",
         "@mysql_mysql_connector_java//jar",
     ],
 )
