--- a/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
 
 proto_library(
