Factor out the ServerState initialization code.

--- a/server/src/main/java/org/cubingusa/techcubing/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/BUILD
@@ -3,12 +3,11 @@ java_binary(
     srcs = ["Main.java"],
     main_class = "org.cubingusa.techcubing.Main",
     deps = [
-        "@org_freemarker_freemarker//jar",
         "@io_grpc_grpc_java//core",
         "@io_grpc_grpc_java//protobuf",
         "@io_grpc_grpc_services//jar",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
-        "//src/main/java/org/cubingusa/techcubing/framework:MysqlConnection",
+        "//src/main/java/org/cubingusa/techcubing/framework:ServerStateInitializer",
         "//src/main/java/org/cubingusa/techcubing/handlers:CompetitionsHandler",
         "//src/main/java/org/cubingusa/techcubing/handlers:HomeHandler",
         "//src/main/java/org/cubingusa/techcubing/handlers:OAuthRedirectHandler",
