Add a ProtoRegistry to list protos in the DB.

--- a/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
@@ -7,6 +7,7 @@ java_library(
     srcs = ["ServerState.java"],
     deps = [
         ":MysqlConnection",
+        ":ProtoRegistry",
         "@org_freemarker_freemarker//jar",
     ],
 )
@@ -16,8 +17,13 @@ java_library(
     srcs = ["ServerStateInitializer.java"],
     deps = [
         ":MysqlConnection",
+        ":ProtoRegistry",
         ":ServerState",
         "@org_freemarker_freemarker//jar",
+        "//src/main/java/org/cubingusa/techcubing/proto/wcif:competition_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto/wcif:event_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto/wcif:person_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto/wcif:round_java_proto",
     ],
     visibility = ["//src/main/java/org/cubingusa/techcubing:__pkg__"],
 )
@@ -42,5 +48,13 @@ java_library(
     deps = [
         "@com_google_protobuf//:protobuf_java",
         "@mysql_mysql_connector_java//jar",
+    ],
+)
+
+java_library(
+    name = "ProtoRegistry",
+    srcs = ["ProtoRegistry.java"],
+    deps = [
+        "@com_google_protobuf//:protobuf_java",
     ],
 )
