Add ProtoDb to handle storing protos in the DB.

--- a/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
@@ -52,7 +52,7 @@ java_library(
         ":BaseHandler",
         "@com_google_protobuf//:protobuf_java_util",
         "@com_googlecode_json_simple_json_simple//jar",
-        "//src/main/java/org/cubingusa/techcubing/framework:MysqlConnection",
+        "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:competition_java_proto",
     ],
