--- a/server/src/main/java/org/cubingusa/techcubing/services/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/services/BUILD
@@ -16,7 +16,7 @@ java_library(
     name = "ListPersonsImpl",
     srcs = ["ListPersonsImpl.java"],
     deps = [
-        "//src/main/java/org/cubingusa/techcubing/framework:MysqlConnection",
+        "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
         "//src/main/java/org/cubingusa/techcubing/proto/services:list_persons_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:person_java_proto",
