Add service for getting an entity by ID.

--- a/server/src/main/java/org/cubingusa/techcubing/proto/services/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/services/BUILD
@@ -6,6 +6,7 @@ proto_library(
     name = "techcubing_service_proto",
     srcs = ["techcubing_service.proto"],
     deps = [
+        ":get_by_id_proto",
         ":list_persons_proto",
     ],
 )
@@ -19,6 +20,7 @@ java_grpc_library(
     name = "techcubing_service_java_grpc",
     srcs = [":techcubing_service_proto"],
     deps = [
+        ":get_by_id_java_proto",
         ":list_persons_java_proto",
         ":techcubing_service_java_proto",
     ],
@@ -37,4 +39,19 @@ proto_library(
 java_proto_library(
     name = "list_persons_java_proto",
     deps = [":list_persons_proto"],
+)
+
+proto_library(
+    name = "get_by_id_proto",
+    srcs = ["get_by_id.proto"],
+    deps = [
+        "@com_google_protobuf//:any_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto:request_context_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto:response_context_proto",
+    ],
+)
+
+java_proto_library(
+    name = "get_by_id_java_proto",
+    deps = [":get_by_id_proto"],
 )
