Implementation of GetById.

--- a/server/src/main/java/org/cubingusa/techcubing/services/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/services/BUILD
@@ -5,7 +5,9 @@ java_library(
     deps = [
         "@io_grpc_grpc_java//stub",
         ":ListPersonsImpl",
+        ":GetByIdImpl",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
+        "//src/main/java/org/cubingusa/techcubing/proto/services:get_by_id_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:list_persons_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:techcubing_service_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:techcubing_service_java_grpc",
@@ -16,6 +18,7 @@ java_library(
     name = "ListPersonsImpl",
     srcs = ["ListPersonsImpl.java"],
     deps = [
+        "@com_google_protobuf//:protobuf_java",
         "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
         "//src/main/java/org/cubingusa/techcubing/proto/services:list_persons_java_proto",
@@ -23,3 +26,13 @@ java_library(
     ],
 )
 
+java_library(
+    name = "GetByIdImpl",
+    srcs = ["GetByIdImpl.java"],
+    deps = [
+        "@com_google_protobuf//:protobuf_java",
+        "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
+        "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
+        "//src/main/java/org/cubingusa/techcubing/proto/services:get_by_id_java_proto",
+    ],
+)
