--- a/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/framework/BUILD
@@ -30,20 +30,6 @@ java_library(
 )
 
 java_library(
-    name = "OAuth",
-    srcs = ["OAuth.java"],
-    deps = [
-        ":ServerState",
-        "@javax_javaee_web_api//jar",
-    ],
-)
-
-java_library(
-    name = "QueryParser",
-    srcs = ["QueryParser.java"],
-)
-
-java_library(
     name = "MysqlConnection",
     srcs = ["MysqlConnection.java"],
     deps = [
@@ -60,23 +46,14 @@ java_library(
 )
 
 java_library(
-    name = "ProtoUtil",
-    srcs = ["ProtoUtil.java"],
-    deps = [
-        "@com_google_protobuf//:protobuf_java",
-        "//src/main/java/org/cubingusa/techcubing/proto:options_java_proto",
-    ],
-)
-
-java_library(
     name = "ProtoDb",
     srcs = ["ProtoDb.java"],
     deps = [
         ":MysqlConnection",
-        ":ProtoUtil",
         ":ServerState",
         "@com_google_protobuf//:protobuf_java",
         "//src/main/java/org/cubingusa/techcubing/proto:options_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/util:ProtoUtil",
     ],
 )
 
@@ -86,12 +63,12 @@ java_library(
     deps = [
         "@com_google_protobuf//:protobuf_java",
         ":ProtoDb",
-        ":ProtoUtil",
         ":ServerState",
         "//src/main/java/org/cubingusa/techcubing/proto:scorecard_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:event_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:person_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:round_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/util:ProtoUtil",
         "//src/main/java/org/cubingusa/techcubing/util:WcifUtil",
     ],
 )
