--- a/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/handlers/BUILD
@@ -56,3 +56,15 @@ java_library(
         "//src/main/java/org/cubingusa/techcubing/proto/wcif:competition_java_proto",
     ],
 )
+
+java_library(
+    name = "ManageDevicesHandler",
+    srcs = ["ManageDevicesHandler.java"],
+    deps = [
+        ":BaseHandler",
+        "@com_google_protobuf//:protobuf_java",
+        "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
+        "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
+        "//src/main/java/org/cubingusa/techcubing/proto:device_java_proto",
+    ],
+)
