Only store the device ID in RequestContext.
There's no need to send the full device proto, we can read that in the
server.

--- a/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
@@ -30,7 +30,7 @@ java_proto_library(
 proto_library(
     name = "request_context_proto",
     srcs = ["request_context.proto"],
-    deps = [":device_proto"],
+    deps = [":options_proto"],
 )
 
 java_proto_library(
