--- a/server/src/main/java/org/cubingusa/techcubing/services/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/services/BUILD
@@ -7,10 +7,12 @@ java_library(
         ":AcquireScorecardImpl",
         ":GetByIdImpl",
         ":ListPersonsImpl",
+        ":ReleaseScorecardImpl",
         "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
         "//src/main/java/org/cubingusa/techcubing/proto/services:acquire_scorecard_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:get_by_id_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:list_persons_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto/services:release_scorecard_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:techcubing_service_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:techcubing_service_java_grpc",
     ],
@@ -49,5 +51,18 @@ java_library(
         "//src/main/java/org/cubingusa/techcubing/proto:device_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto:scorecard_java_proto",
         "//src/main/java/org/cubingusa/techcubing/proto/services:acquire_scorecard_java_proto",
+    ],
+)
+
+java_library(
+    name = "ReleaseScorecardImpl",
+    srcs = ["ReleaseScorecardImpl.java"],
+    deps = [
+        "@com_google_protobuf//:protobuf_java",
+        "//src/main/java/org/cubingusa/techcubing/framework:ProtoDb",
+        "//src/main/java/org/cubingusa/techcubing/framework:ServerState",
+        "//src/main/java/org/cubingusa/techcubing/proto:device_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto:scorecard_java_proto",
+        "//src/main/java/org/cubingusa/techcubing/proto/services:release_scorecard_java_proto",
     ],
 )
