Provide more result data in ReleaseScorecard.

--- a/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
+++ b/server/src/main/java/org/cubingusa/techcubing/proto/BUILD
@@ -63,7 +63,9 @@ proto_library(
     name = "scorecard_proto",
     srcs = ["scorecard.proto"],
     deps = [
+        ":device_type_proto",
         ":options_proto",
+        "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
