--- a/src/main/java/com/techcubing/android/AndroidManifest.xml
+++ b/src/main/java/com/techcubing/android/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name="com.techcubing.android.activities.LobbyActivity"></activity>
     </application>
 
 </manifest>
