--- a/src/main/java/com/techcubing/android/BUILD
+++ b/src/main/java/com/techcubing/android/BUILD
@@ -1,3 +1,5 @@
+load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
+
 android_binary(
     name = "app",
     custom_package = "com.techcubing.android",
@@ -8,6 +10,18 @@ android_binary(
     ],
 )
 
+genrule(
+    name = "camerakit_genrule",
+    srcs = ["@camerakit//file"],
+    outs = ["camerakit.aar"],
+    cmd = "cp $(SRCS) $@",
+)
+
+aar_import(
+    name = "com_wonderkiln_camerakit",
+    aar = ":camerakit.aar",
+)
+
 android_library(
     name = "activities",
     srcs = glob(["activities/*.java"]),
@@ -15,10 +29,14 @@ android_library(
     manifest = "AndroidManifest.xml",
     resource_files = glob(["res/**"]),
     deps = [
+        gmaven_artifact("com.android.support:exifinterface:aar:26.1.0"),
+        gmaven_artifact("com.google.firebase:firebase-ml-vision:aar:16.0.0"),
+        gmaven_artifact("com.google.android.gms:play-services-tasks:aar:15.0.1"),
         "//src/main/java/com/techcubing/android:util",
         "//src/main/java/com/techcubing/proto:device_config_java_lite_proto",
         "@androidsdk//com.android.support:appcompat-v7-25.3.1",
         "@com_google_protobuf_javalite//:protobuf_java_lite",
+        ":com_wonderkiln_camerakit",
     ],
 )
 
